avoid the badge from wrapping

--- a/ArticleTemplates/assets/scss/modules/blocks/_comment.scss
+++ b/ArticleTemplates/assets/scss/modules/blocks/_comment.scss
@@ -252,6 +252,7 @@
 
     @include mq($to: col2) {
         display: inline;
+        white-space: nowrap;
     }
 }
 
